--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: ;
     font-family: 'Open Sans', sans-serif;
     /* border: 2px solid red; */
 }
@@ -106,9 +105,16 @@ header {
     margin-bottom: 18px;
 }
 
+.tick-sign {
+    color: green;
+    font-size: 20px;
+    padding-right: 10px;
+}
+
 .failing-items {
-    list-style-type: square;
-    padding-left: 25px;
+    list-style-type: none;
+
+    /* padding-left: 2px; */
 
 }
 
