--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    /* border: 2px solid red; */
+    /* border: 1px solid red; */
 }
 
 main {
@@ -166,6 +166,82 @@ header {
     margin-bottom: 24px;
 }
 
+
+
+/* bonus section styles */
+.time-management {
+    display: flex;
+    width: 90%;
+    justify-content: center;
+    margin: 0 auto;
+    margin-bottom: 150px;
+    background: #FFF8F3;
+    padding-bottom: 150px;
+}
+
+.time-management-container {
+    text-align: center;
+    width: 80%;
+}
+
+.time-management-container .section-title {
+    padding-top: 100px;
+    margin-top: 20px;
+}
+
+.time-management-container .section-description {
+    margin: 40px 0;
+    color: #757575;
+}
+
+.management-cards-container {
+    display: flex;
+    flex: 1;
+    /* width: 80%; */
+    /* margin: 0 auto; */
+    gap: 30px;
+    justify-content: space-between;
+
+
+}
+
+.management-cards-container li {
+    list-style: none;
+    text-align: left;
+}
+
+.time-card {
+    width: 50%;
+
+    padding: 50px;
+    border: 1px solid white;
+    background-color: #FFFfff;
+    /* box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.19), 6px 6px 12px rgba(0, 0, 0, 0.23); */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+
+}
+
+.time-card-title {
+    font-size: 22px;
+    font-weight: 600;
+    /* padding: 10px 0; */
+}
+
+.time-card-sub-title {
+    margin-top: 20px;
+    margin-bottom: 15px;
+    color: #757575;
+}
+
+.time-card ul {
+    margin-top: 20px;
+    padding-top: 10px;
+    padding-left: 50px;
+}
+
+.time-card li {
+    padding-bottom: 10px;
+}
 
 /* footer area */
 
